test/Fail/ImplicitMutualMutual.err
ImplicitMutualMutual.agda:3,1-9,9: error: [Syntax.DisallowedInterleavedMutual]
The following names are declared, but not accompanied by a
definition:
- test (at ImplicitMutualMutual.agda:5,1-5)
Since 'mutual' blocks can not participate in mutual recursion,
their definition must be given before this point.
